Minor fixes, added box shadow to the (empty) dashboard containers and fixed collapsed sidebar at startup.

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -10,7 +10,6 @@
 		position: relative;
 		width: 100%;
 		height: 49%;
-		background-color: #ecf0f5;
 		margin-bottom: 5px;
 	}
 
@@ -37,7 +36,6 @@
 		vertical-align: top;
 		width: 49%;
 		height: 49%;
-		background-color: #ecf0f5;
 		margin: 3px;
 	}
 
@@ -46,7 +44,6 @@
 		position: relative;
 		width: 49%;
 		height: 49%;
-		background-color: #ecf0f5;
 		margin: 3px;
 	}
 
@@ -103,11 +100,19 @@
 }
 
 /* Common for all resolutions*/
+.content-wrapper{
+	background-color: #ecf0f5;
+}
 
 .dashboard-content-container{
 	position: relative;
 
 	width: 100%;
+}
+
+.dashboard-container{
+	background-color: white;
+	box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.1);
 }
 
 .addBtn{
@@ -136,6 +141,7 @@
 	height: 20%;
 	z-index: 5;
 	background-color: white;
+	box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.1);
 }
 
 .widgetBtnTxt{
